k8s/property-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: property-deployment
  name: property-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: property-deployment
  template:
    metadata:
      labels:
        app: property-deployment
    spec:
      containers:
      - name: property-deployment
        image: property-service:0.0.1-SNAPSHOT
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: property-service
  labels:
    app: property-service
spec:
  selector:
    app: property-deployment
  ports:
  - protocol: TCP
    name: 8080-8080
    port: 8080
    targetPort: 8080
